# myEmulator

./: .gitignore  CMakeLists.txt  README.md
include/: alu.h  bios.h  bus.h  cartridge.h  cpu.h  display.h  emulator.h  instructions.h
src/: alu.c  bios.c  bus.c  cartridge.c  cpu.c  display.c  emulator.c  instructions.c  main.c
